--- a/style.css
+++ b/style.css
@@ -6,13 +6,12 @@ body {
   align-items: center;
   width: 100vw;
 }
-header {
-  height: 100vh;
-}
+
 
 h1 {
   font-family: 'Zhi Mang Xing', cursive;
-  font-size: 100px;
+  font-size: 120px;
+  font-weight: 100;
   margin:0 auto;
   text-align: center;
   color: #CB1F03;
@@ -20,6 +19,12 @@ h1 {
 
 img {
   align-self: center;
+  margin-top: -300px;
+  width: 80vw;
+}
+
+.part1 {
+  height: 100vh;
 }
 .part2 {
   height: 100vh;
@@ -46,4 +51,26 @@ img {
   height: 100vh;
   width:100%;
   background-color: white;
+}
+@media screen and (max-width:414px) {
+  h1 {
+    font-size: 100px;
+  }
+  .part1 {
+    height: 65vh;
+  }
+  .part2 {
+    height: 35vh;
+  }
+}
+@media screen and (max-width:414px) {
+  h1 {
+    font-size: 100px;
+  }
+  .part1 {
+    height: 65vh;
+  }
+  .part2 {
+    height: 35vh;
+  }
 }
