--- a/style.css
+++ b/style.css
@@ -4,17 +4,59 @@ body {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width:414px;
 }
-
-
-h1 {
+ h1 {
   font-family: 'Zhi Mang Xing', cursive;
-  font-size: 120px;
-  font-weight: 100;
-  margin:0 auto;
+  font-size: 100px;
+  font-weight: 100; 
   text-align: center;
   color: #CB1F03;
+} 
+.scrollDown {
+  position: absolute;
+  font-family: 'Staatliches', cursive;
+  background-color: white;
+  font-size: 40px;
+  color:black;
+  right: 10vw;
+  bottom: 40vh;
+  height: 40px;
+  width: 110px;
+  padding: 10px 10px;
+} 
+.part1 {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  height: 65vh;
+  width:100vw;
+}
+.part2 {
+  height: 35vh;
+  width:100vw;
+  background: linear-gradient(180deg, #000000 0%, rgba(29, 29, 29, 0) 2%), linear-gradient(360deg, #2E2E2E 0%, rgba(46, 46, 46, 0) 2%), #1D1D1D;
+}
+.part3 {
+  height: 100vh;
+  width:100vw;
+  background: linear-gradient(360deg, #5B5B5B 0%, rgba(91, 91, 91, 0) 2%), #2E2E2E;
+}
+
+.part4 {
+  height: 100vh;
+  width:100vw;
+  background: linear-gradient(360deg, #D8D5D5 0%, rgba(91, 91, 91, 0) 2%), #5B5B5B;
+}
+.part5 {
+  height: 100vh;
+  width:414px;
+  background: linear-gradient(180deg, rgba(216, 213, 213, 0) 95.83%, #FFFFFF 100%), #D8D5D5;
+}
+.part6 {
+  height: 100vh;
+  width:100vw;
+  background-color: white;
 }
 
 img {
@@ -22,64 +64,58 @@ img {
   margin-top: 100px;
   width: 50vw;
 }
-.scrollDown {
-  position: absolute;
-  color:white;
-  right: 20px;
-  bottom: 20px;
-  height: 40px;
-  width: 100px;
-}
+
 .scrollDown:hover {
   cursor: pointer;
-}
-
-.part1 {
-  height: 100vh;
-}
-.part2 {
-  height: 100vh;
-  width:100%;
-  background: linear-gradient(180deg, #000000 0%, rgba(29, 29, 29, 0) 2%), linear-gradient(360deg, #2E2E2E 0%, rgba(46, 46, 46, 0) 2%), #1D1D1D;
-}
-.part3 {
-  height: 100vh;
-  width:100%;
-  background: linear-gradient(360deg, #5B5B5B 0%, rgba(91, 91, 91, 0) 2%), #2E2E2E;
-}
-
-.part4 {
-  height: 100vh;
-  width:100%;
-  background: linear-gradient(360deg, #D8D5D5 0%, rgba(91, 91, 91, 0) 2%), #5B5B5B;
-}
-.part5 {
-  height: 100vh;
-  width:100%;
-  background: linear-gradient(180deg, rgba(216, 213, 213, 0) 95.83%, #FFFFFF 100%), #D8D5D5;
-}
-.part6 {
-  height: 100vh;
-  width:100%;
-  background-color: white;
-}
-
-@media screen and (max-width:414px) {
+} 
+@media screen and (min-width:1440px) {
   h1 {
-    font-size: 100px;
-  }
+    font-family: 'Zhi Mang Xing', cursive;
+    font-size: 120px;
+    font-weight: 100;
+    margin:0 auto;
+    text-align: center;
+    color: #CB1F03;
+  } 
   .scrollDown {
     position: absolute;
-    color:white;
+    font-family: 'Staatliches', cursive;
+    background-color: white;
+    font-size: 40px;
+    color:black;
     right: 20px;
-    bottom: 40vh;
+    bottom: 20px;
     height: 40px;
-    width: 100px;
+    width: 110px;
+    padding: 10px 10px;
   }
+  
   .part1 {
-    height: 65vh;
+    height: 100vh;
   }
   .part2 {
-    height: 35vh;
+    height: 100vh;
+    width:100%;
+    background: linear-gradient(180deg, #000000 0%, rgba(29, 29, 29, 0) 2%), linear-gradient(360deg, #2E2E2E 0%, rgba(46, 46, 46, 0) 2%), #1D1D1D;
   }
-}
+  .part3 {
+    height: 100vh;
+    width:100%;
+    background: linear-gradient(360deg, #5B5B5B 0%, rgba(91, 91, 91, 0) 2%), #2E2E2E;
+  }
+  
+  .part4 {
+    height: 100vh;
+    width:100%;
+    background: linear-gradient(360deg, #D8D5D5 0%, rgba(91, 91, 91, 0) 2%), #5B5B5B;
+  }
+  .part5 {
+    height: 100vh;
+    width:100%;
+    background: linear-gradient(180deg, rgba(216, 213, 213, 0) 95.83%, #FFFFFF 100%), #D8D5D5;
+  }
+  .part6 {
+    height: 100vh;
+    width:100%;
+    background-color: white;
+  }
