--- a/style.css
+++ b/style.css
@@ -30,22 +30,22 @@ body {
   flex-flow: column nowrap;
   align-items: center;
   height: 65vh;
-  width:100vw;
+  width:414px;
 }
 .part2 {
   height: 35vh;
-  width:100vw;
+  width:414px;
   background: linear-gradient(180deg, #000000 0%, rgba(29, 29, 29, 0) 2%), linear-gradient(360deg, #2E2E2E 0%, rgba(46, 46, 46, 0) 2%), #1D1D1D;
 }
 .part3 {
   height: 100vh;
-  width:100vw;
+  width:414px;
   background: linear-gradient(360deg, #5B5B5B 0%, rgba(91, 91, 91, 0) 2%), #2E2E2E;
 }
 
 .part4 {
   height: 100vh;
-  width:100vw;
+  width:414px;
   background: linear-gradient(360deg, #D8D5D5 0%, rgba(91, 91, 91, 0) 2%), #5B5B5B;
 }
 .part5 {
@@ -55,7 +55,7 @@ body {
 }
 .part6 {
   height: 100vh;
-  width:100vw;
+  width:414px;
   background-color: white;
 }
 
@@ -69,6 +69,15 @@ img {
   cursor: pointer;
 } 
 @media screen and (min-width:1440px) {
+  body {
+    background-color: black;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    width:100vw;
+    
+  }
   h1 {
     font-family: 'Zhi Mang Xing', cursive;
     font-size: 120px;
