--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ h1 {
   background-color: white;
   font-size: 40px;
   color:black;
-  right: 10vw;
-  bottom: 40vh;
+  right: 5vw;
+  bottom: 31vh;
   height: 40px;
   width: 110px;
   padding: 10px 10px;
@@ -47,9 +47,23 @@ h1 {
   width:414px;
 }
 .part2 {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
   height: 35vh;
   width:414px;
   background: linear-gradient(180deg, #000000 0%, rgba(29, 29, 29, 0) 2%), linear-gradient(360deg, #2E2E2E 0%, rgba(46, 46, 46, 0) 2%), #1D1D1D;
+}
+.textPart2 {
+  font-family: 'Zhi Mang Xing', cursive;
+  margin: 0 5vh;
+  font-size: 50px;
+  text-align: center;
+  color: #CB1F03;
+}
+span {
+  font-size: 60px;
+  color: white;
 }
 .part3 {
   height: 100vh;
