--- a/style.css
+++ b/style.css
@@ -167,3 +167,8 @@ span {
     width:100%;
     background-color: white;
   }
+  h2 .subtitle {
+    margin: 50px 0;
+    text-align: center;
+    font-family: 'Wire One', sans-serif;
+}
