--- a/style.css
+++ b/style.css
@@ -98,11 +98,37 @@ span {
   font-family: 'Wire One', sans-serif;
   font-size: 34px;
   text-align: center;
+  font-weight: 400;
 }
 .orderBox {
-  width: 50%;
+  width: 40%;
+  border: 1px solid #828282;
+  margin: auto;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Staatliches', cursive;
+  color:#CB1F03;
+  font-size: 20px;
 }
-
+div .orderBox > svg {
+  margin: 10px 0px -15px 0px;
+}
+.orderButton {
+  background-color: #CB1F03;
+  width: 80%;
+  margin: 50px auto;
+  font-size: 36px;
+  font-family: 'Staatliches';
+  height: 92px;
+}
+.orderBox:hover {
+  background-color: #d8d5d5;
+}
+button > span {
+  font-size: 1em;
+}
 .heroImage {
   align-self: center;
   margin-top: 70px;
@@ -183,4 +209,3 @@ span {
     width:100%;
     background-color: white;
   }
-  
