--- a/style.css
+++ b/style.css
@@ -81,11 +81,31 @@ span {
   height: 100vh;
   width:414px;
   background: linear-gradient(360deg, #D8D5D5 0%, rgba(91, 91, 91, 0) 2%), #5B5B5B;
+  display: flex;
+  flex-direction: column;
 }
 .part5 {
   height: 100vh;
   width:414px;
   background: linear-gradient(180deg, rgba(216, 213, 213, 0) 95.83%, #FFFFFF 100%), #D8D5D5;
+}
+section.Part5 {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Wire One', sans-serif;
+  margin: 20px;
+}
+.h2Part5 {
+  font-weight: 600;
+  font-size: 42px;
+  margin: 0;
+}
+section.Part5 > p {
+  font-size: 28px;
+}
+.snowWhite > h2 {
+  font-family: 'Wire One', sans-serif;
+  font-size: 42px;
 }
 .part6 {
   height: 100vh;
