--- a/style.css
+++ b/style.css
@@ -75,6 +75,21 @@ span {
   height: 100vh;
   width:414px;
   background: linear-gradient(360deg, #5B5B5B 0%, rgba(91, 91, 91, 0) 2%), #2E2E2E;
+  padding: 0 20px;
+}
+.quotes {
+  display:flex;
+  flex-flow: row wrap;
+  align-items: center;
+  
+}
+.names {
+  font-size: 30px;
+  margin:0 20px;
+}
+.faceImages {
+  width:100px;
+  margin:0;
 }
 
 .part4 {
