--- a/style.css
+++ b/style.css
@@ -77,6 +77,10 @@ span {
   background: linear-gradient(360deg, #5B5B5B 0%, rgba(91, 91, 91, 0) 2%), #2E2E2E;
   
 }
+h1.partTitle.white.section3 {
+  margin-top: 34px;
+  font-family: 'Wire One';
+}
 .quoteBlock {
   display:flex;
   flex-flow: row wrap;
