--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ section {
   flex-flow: column nowrap;
   align-items: center;
   height: 64vh;
-  width:414px;
+  width: 100%;
 }
 .part2 {
   display: flex;
@@ -68,12 +68,12 @@ section {
   color: #CB1F03;
 }
 span {
-  font-size: 60px;
+  font-size: 80px;
   color: white;
 }
 .part3 {
   height: 100vh;
-  width:414px;
+  width: 100%;
   background: linear-gradient(360deg, #5B5B5B 0%, rgba(91, 91, 91, 0) 2%), #2E2E2E;
   
 }
@@ -81,6 +81,42 @@ h1.partTitle.white.section3 {
   margin-top: 34px;
   font-family: 'Wire One';
 }
+section.sectionPart3 {
+  margin: 40px 20px;
+}
+.col2.Part3 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 60px;
+}
+span.steps {
+  font-family: 'Zhi Mang Xing';
+  margin-right: 20px;
+}
+svg.stepSVG {
+  float: right;
+  width: 70px;
+  height: 90px;
+}
+.bottomSection3 {
+  display: flex;
+  flex-direction: column;
+}
+.svgMule {
+  margin: 10px auto;
+}
+.percantagePart3 {
+  margin: 0 auto;
+  font-family: 'Staatliches';
+  font-size: 36px;
+}
+.climatePart3 {
+  font-family: 'Staatliches';
+  color: #CB1F03;
+  font-size: 36px;
+  margin: 10px auto;
+}
+
 .quoteBlock {
   display:flex;
   flex-flow: row wrap;
@@ -99,7 +135,6 @@ h1.partTitle.white.section3 {
 .faceImagePersbrandt {
   width: 77px;
   height: 107px;
-  
 }
 .faceImagePlura {
   width: 100px;
@@ -109,14 +144,14 @@ h1.partTitle.white.section3 {
 
 .part4 {
   height: 100vh;
-  width:414px;
+  width: 100%;
   background: linear-gradient(360deg, #D8D5D5 0%, rgba(91, 91, 91, 0) 2%), #5B5B5B;
   display: flex;
   flex-direction: column;
 }
 .part5 {
   height: 100vh;
-  width:414px;
+  width: 100%;
   background: linear-gradient(180deg, rgba(216, 213, 213, 0) 98%, #FFFFFF 100%), #D8D5D5;
 }
 section.Part5 {
