--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ section {
 h1.partTitle.white.section3 {
   margin-top: 34px;
   font-family: 'Wire One';
+  font-size: 46px;
 }
 section.sectionPart3 {
   margin: 40px 20px;
@@ -93,6 +94,7 @@ section.sectionPart3 {
 }
 span.steps {
   font-family: 'Zhi Mang Xing';
+  font-size: 72px;
   margin-right: 20px;
 }
 svg.stepSVG {
@@ -309,16 +311,38 @@ button > span {
     height:180px;
   }
   .part3 {
+    display: flex;
+    flex-flow: column nowrap;
     height: 100vh;
     width:100%;
     background: linear-gradient(360deg, #5B5B5B 0%, rgba(91, 91, 91, 0) 2%), #2E2E2E;
   }
+  .fullSection3 {
+    align-self: center;
+    display: flex;
+    flex-flow: row nowrap;
+    margin: 20px 20px;
+  }
+  .part3 > .partTitle {
+    align-self: center;
+  }
+  .sectionPart3 {
+    display: flex;
+    flex-flow: row nowrap;
+    width:400px;
+    margin: 20px 20px;
+  }
   
+  .bottomSection3 {
+    width:50%;
+    margin: 20px 20px;
+  }
   .part4 {
     height: 100vh;
     width:100%;
     background: linear-gradient(360deg, #D8D5D5 0%, rgba(91, 91, 91, 0) 2%), #5B5B5B;
   }
+  
   .part5 {
     display: flex;
     flex-flow: column nowrap;
