--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ section {
   background: linear-gradient(360deg, #5B5B5B 0%, rgba(91, 91, 91, 0) 2%), #2E2E2E;
   
 }
-.hej {
+.djungle {
   margin-top: 34px;
   font-family: 'Wire One';
   font-size: 46px;
@@ -369,7 +369,7 @@ button > span {
   .partTitle {
     justify-content: flex-start;
   }
-  .hej {
+  .fullSection4 {
     display: flex;
     flex-flow: row nowrap;
     align-self: center;
