--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ button > span {
   
   .part1 {
     height: 100vh;
-    background: background: linear-gradient(180deg, #000000 84.9%, #1D1D1D 100%), #000000;
+    background: linear-gradient(180deg, #000000 93%, #1D1D1D 100%), #000000;
   }
   
   .part2 {
